tests/typechecking/valid/0-basic_tests/simple_callbis.ml
let x = 5. in
let y = x+. 1. in
let z = y +. 1. in
print_float (x+.y+.z)