tests/typechecking/invalid/float/invalid_operation.ml
let x = 2.5 in
let y = 6 in
let z = x -. y in
print_float(z)